# jupyter-dart-kernel

./: README.md  dartkernel.py  kernel.json  pyproject.toml
jupyterdartkernel/: kernel.json
src/jupyter-dart-kernel/: __main__.py  kernel.py
src/jupyterdartkernel/: __init__.py  __main__.py  install_kernelspec.py  kernel.py
