[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-dart-kernel"
version = "0.0.1"
authors = [
  { name="Vic Kumar", email="vickumar@gmail.com" },
]
description = "A simple kernel that adds the Dart programming language into Project Jupyter."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vickumar1981/jupyter-dart-kernel"
"Bug Tracker" = "https://github.com/vickumar1981/jupyter-dart-kernel/issues"